# hackaton26

./: .dockerignore  BRAINSTORMING.md  CLAUDE.md  Dockerfile  PROSJEKTFORSLAG.md  README.md  main.py  pyproject.toml
.github/workflows/: docker.yml
src/confluence_sync/: __init__.py  __main__.py  api.py  auth.py  cli.py  converter.py  frontmatter.py  jira_api.py  models.py  sync.py  tree.py
static/: app.js  index.html  pcm-worklet.js  style.css  whisper-worker.js
tests/: test_converter.py  test_frontmatter.py  test_tree.py
tests/fixtures/: sample_storage.html
