[project]
name = "confluence-sync"
version = "0.1.0"
description = "Toveis-synkronisering mellom Confluence og lokalt Markdown-filhierarki"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0",
    "requests>=2.28",
    "python-frontmatter>=1.0",
    "markdownify>=0.11",
    "markdown>=3.4",
    "beautifulsoup4>=4.12",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
confluence-sync = "confluence_sync.cli:main"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
