[project]
name = "skansen"
version = "0.1.0"
description = "Norsk tale-til-tekst webapp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.34",
    "pywhispercpp>=1.3",
    "numpy>=2.0",
    "scipy>=1.14",
    "python-multipart>=0.0.29",
]
